don't track built files

--- a/Poster/Makefile
+++ b/Poster/Makefile
@@ -23,12 +23,17 @@ epub:
 	mk4ht htlatex $(manuscript).tex 'xhtml,charset=utf-8,pmathml' ' -cunihtf -utf8 -cvalidate'
 	ebook-convert $(manuscript).html $(manuscript).epub
 
+fc-diagram.pdf :
+	latex fc-diagram
+	dvipdf fc-diagram
+
 clean:
 	rm -f *.pdf *.dvi *.toc *.aux *.out *.log *.bbl *.blg *.log *.spl *~ *.spl *.zip *.acn *.glo *.ist *.epub
 
 realclean: clean
 	rm -rf $(manuscript).dvi
 	rm -f $(manuscript).pdf
+	rm -f fc-diagram.pdf
 
 %.ps :%.eps
 	convert $< $@
